First commited as before_63692_rev1