@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2014 Freescale Semiconductor and others.
+ * Copyright (c) 2008, 2015 Freescale Semiconductor and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -24,7 +24,6 @@ import java.text.DateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
-import java.util.Comparator;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -62,10 +61,8 @@ import org.eclipse.jface.viewers.ColumnWeightData;
 import org.eclipse.jface.viewers.ComboBoxCellEditor;
 import org.eclipse.jface.viewers.ICellModifier;
 import org.eclipse.jface.viewers.ISelection;
-import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITreeContentProvider;
-import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.StyledCellLabelProvider;
 import org.eclipse.jface.viewers.StyledString;
@@ -84,10 +81,6 @@ import org.eclipse.swt.dnd.DragSourceEvent;
 import org.eclipse.swt.dnd.DragSourceListener;
 import org.eclipse.swt.dnd.Transfer;
 import org.eclipse.swt.dnd.TransferData;
-import org.eclipse.swt.events.MenuDetectEvent;
-import org.eclipse.swt.events.MenuDetectListener;
-import org.eclipse.swt.events.ModifyEvent;
-import org.eclipse.swt.events.ModifyListener;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
 import org.eclipse.swt.events.SelectionAdapter;
@@ -209,7 +202,7 @@ public class ResourceFilterGroup {
 
 	/**
 	 * Set the IContainer resource to edit
-	 * 
+	 *
 	 * @param res
 	 *            the container resource
 	 */
@@ -308,14 +301,17 @@ public class ResourceFilterGroup {
 			changed = true;
 		}
 
+		@Override
 		public int getChildrenLimit() {
 			return Integer.MAX_VALUE;
 		}
 
+		@Override
 		protected void argumentsChanged() {
 			changed = true;
 		}
 
+		@Override
 		public boolean hasChanged() {
 			if (changed)
 				return true;
@@ -340,6 +336,7 @@ public class ResourceFilterGroup {
 			return false;
 		}
 
+		@Override
 		public void removeAll() {
 			if (children.size() > 0) {
 				super.removeAll();
@@ -353,7 +350,8 @@ public class ResourceFilterGroup {
 	static String excludeAllGroup = "EXCLUDE_ALL_GROUP";  //$NON-NLS-1$
 
 	class TreeContentProvider implements ITreeContentProvider {
-		
+
+		@Override
 		public Object[] getChildren(Object parentElement) {
 			if (parentElement == filters) {
 				if (filters.getChildren().length > 0)
@@ -376,6 +374,7 @@ public class ResourceFilterGroup {
 			return null;
 		}
 
+		@Override
 		public Object getParent(Object element) {
 			if (element instanceof String)
 				return filters;
@@ -388,6 +387,7 @@ public class ResourceFilterGroup {
 			return null;
 		}
 
+		@Override
 		public boolean hasChildren(Object element) {
 			if (element instanceof FilterCopy || element instanceof String) {
 				Object[] children = getChildren(element);
@@ -396,13 +396,16 @@ public class ResourceFilterGroup {
 			return false;
 		}
 
+		@Override
 		public Object[] getElements(Object inputElement) {
 			return getChildren(inputElement);
 		}
 
+		@Override
 		public void dispose() {
 		}
 
+		@Override
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
 		}
 	}
@@ -416,11 +419,13 @@ public class ResourceFilterGroup {
 		public LabelProvider() {
 			util = new FilterTypeUtil();
 			fBoldStyler= new Styler() {
+				@Override
 				public void applyStyles(TextStyle textStyle) {
 					textStyle.font= boldFont;
 				}
 			};
 			fPlainStyler= new Styler() {
+				@Override
 				public void applyStyles(TextStyle textStyle) {
 					textStyle.font= plainFont;
 				}
@@ -447,6 +452,7 @@ public class ResourceFilterGroup {
 			return copy.isUnderAGroupFilter();
 		}
 
+		@Override
 		public void update(ViewerCell cell) {
 			int columnIndex = cell.getColumnIndex();
 			String column = getColumnID(columnIndex);
@@ -472,14 +478,14 @@ public class ResourceFilterGroup {
 			}
 			else {
 				filter = (FilterCopy) element;
-	
+
 				if (column.equals(FilterTypeUtil.MODE)) {
 					StyledString styledString = getStyleColumnText(filter);
 					if (!isPartialFilter(filter)) {
 						Object isInheritable = FilterTypeUtil.getValue(filter, FilterTypeUtil.INHERITABLE);
 						if (((Boolean)isInheritable).booleanValue())
 							styledString.append("   " + IDEWorkbenchMessages.ResourceFilterPage_recursive); //$NON-NLS-1$
-						
+
 					}
 					cell.setText(styledString.toString());
 					cell.setStyleRanges(styledString.getStyleRanges());
@@ -495,7 +501,7 @@ public class ResourceFilterGroup {
 
 			super.update(cell);
 		}
-		
+
 		private StyledString getStyleColumnText(FilterCopy filter) {
 			if ((filter.getChildrenLimit() > 0)) {
 				String whiteSpace = " "; //$NON-NLS-1$;
@@ -528,6 +534,7 @@ public class ResourceFilterGroup {
 			return ui.formatStyledText(filter, fPlainStyler, fBoldStyler);
 		}
 
+		@Override
 		protected void measure(Event event, Object element) {
 			super.measure(event, element);
 		}
@@ -540,8 +547,9 @@ public class ResourceFilterGroup {
 			return ""; //$NON-NLS-1$
 		}
 	}
-	
+
 	class CellModifier implements ICellModifier {
+		@Override
 		public boolean canModify(Object element, String property) {
 			FilterCopy filter = (FilterCopy) element;
 			if (property.equals(FilterTypeUtil.ARGUMENTS)
@@ -550,11 +558,13 @@ public class ResourceFilterGroup {
 			return true;
 		}
 
+		@Override
 		public Object getValue(Object element, String property) {
 			FilterCopy filter = (FilterCopy) element;
 			return FilterTypeUtil.getValue(filter, property);
 		}
 
+		@Override
 		public void modify(Object element, String property, Object value) {
 			FilterCopy filter = (FilterCopy) ((TableItem) element).getData();
 			FilterTypeUtil.setValue(filter, property, value);
@@ -565,7 +575,7 @@ public class ResourceFilterGroup {
 	/**
 	 * Creates the widget group. Callers must call <code>dispose</code> when the
 	 * group is no longer needed.
-	 * 
+	 *
 	 * @param parent
 	 *            the widget parent
 	 * @return container of the widgets
@@ -607,7 +617,7 @@ public class ResourceFilterGroup {
 		data.horizontalSpan = 2;
 		label.setLayoutData(data);
 		label.setFont(font);
-		
+
 		createViewerGroup(composite);
 		createButtonGroup(composite);
 
@@ -640,11 +650,7 @@ public class ResourceFilterGroup {
 		filterView.setInput(filters);
 		filterView.getTree().setFont(parent.getFont());
 
-		filterView.addSelectionChangedListener(new ISelectionChangedListener() {
-			public void selectionChanged(SelectionChangedEvent event) {
-				refreshEnablement();
-			}
-		});
+		filterView.addSelectionChangedListener(event -> refreshEnablement());
 
 		TreeColumn modeColumn = new TreeColumn(filterView.getTree(), 0);
 		modeColumn
@@ -677,6 +683,7 @@ public class ResourceFilterGroup {
 		}
 
 		filterView.getTree().addMouseListener(new MouseListener() {
+			@Override
 			public void mouseDoubleClick(MouseEvent e) {
 				if (!handleEdit()) {
 					ISelection selection = filterView.getSelection();
@@ -689,9 +696,11 @@ public class ResourceFilterGroup {
 				}
 			}
 
+			@Override
 			public void mouseDown(MouseEvent e) {
 			}
 
+			@Override
 			public void mouseUp(MouseEvent e) {
 			}
 		});
@@ -702,17 +711,15 @@ public class ResourceFilterGroup {
 		filterView.addDropSupport(ops, transfers,
 				new FilterCopyDrop(filterView));
 
-		filterView.getTree().addMenuDetectListener(new MenuDetectListener() {
-			public void menuDetected(MenuDetectEvent e) {
-				MenuManager mgr = new MenuManager();
-				mgr.add(addSubFilterAction);
-				mgr.add(addSubGroupFilterAction);
-				mgr.add(new Separator());
-				mgr.add(new EditFilterAction());
-				mgr.add(new RemoveFilterAction());
-				filterView.getControl().setMenu(
-						mgr.createContextMenu(filterView.getControl()));
-			}
+		filterView.getTree().addMenuDetectListener(e -> {
+			MenuManager mgr = new MenuManager();
+			mgr.add(addSubFilterAction);
+			mgr.add(addSubGroupFilterAction);
+			mgr.add(new Separator());
+			mgr.add(new EditFilterAction());
+			mgr.add(new RemoveFilterAction());
+			filterView.getControl().setMenu(
+					mgr.createContextMenu(filterView.getControl()));
 		});
 		TreeColumnLayout layout = new TreeColumnLayout();
 		tableComposite.setLayout( layout );
@@ -738,9 +745,11 @@ public class ResourceFilterGroup {
 							null));
 		}
 
+		@Override
 		public void run() {
 			handleEdit();
 		}
+		@Override
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -762,9 +771,11 @@ public class ResourceFilterGroup {
 							null));
 		}
 
+		@Override
 		public void run() {
 			handleRemove();
 		}
+		@Override
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -778,7 +789,7 @@ public class ResourceFilterGroup {
 	class AddSubFilterAction extends Action {
 
 		boolean createGroupOnly;
-		
+
 		public AddSubFilterAction(boolean createGroupOnly) {
 			this.createGroupOnly = createGroupOnly;
 			setText(NLS
@@ -788,11 +799,7 @@ public class ResourceFilterGroup {
 							null));
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.action.Action#run()
-		 */
+		@Override
 		public void run() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -802,11 +809,7 @@ public class ResourceFilterGroup {
 			}
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.action.Action#isEnabled()
-		 */
+		@Override
 		public boolean isEnabled() {
 			ISelection selection = filterView.getSelection();
 			if (selection instanceof IStructuredSelection) {
@@ -827,7 +830,7 @@ public class ResourceFilterGroup {
 		}
 		handleAdd(selectedObject, createGroupOnly);
 	}
-	
+
 	private void handleAdd(Object selection, boolean createGroupOnly) {
 		if (selection == null) {
 			FilterCopy newFilter = new FilterCopy();
@@ -907,13 +910,7 @@ public class ResourceFilterGroup {
 			super(viewer);
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see
-		 * org.eclipse.jface.viewers.ViewerDropAdapter#performDrop(java.lang
-		 * .Object)
-		 */
+		@Override
 		public boolean performDrop(Object data) {
 			Object target = getCurrentTarget();
 			if (target == null)
@@ -943,13 +940,7 @@ public class ResourceFilterGroup {
 			return true;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see
-		 * org.eclipse.jface.viewers.ViewerDropAdapter#validateDrop(java.lang
-		 * .Object, int, org.eclipse.swt.dnd.TransferData)
-		 */
+		@Override
 		public boolean validateDrop(Object target, int operation,
 				TransferData transferType) {
 			if (filterCopyTransfer.isSupportedType(transferType)) {
@@ -963,39 +954,21 @@ public class ResourceFilterGroup {
 
 	class FilterCopyDrag implements DragSourceListener {
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see
-		 * org.eclipse.swt.dnd.DragSourceListener#dragFinished(org.eclipse.swt
-		 * .dnd.DragSourceEvent)
-		 */
+		@Override
 		public void dragFinished(DragSourceEvent event) {
 			if (event.detail == DND.DROP_MOVE) {
 				// nothing
 			}
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see
-		 * org.eclipse.swt.dnd.DragSourceListener#dragSetData(org.eclipse.swt
-		 * .dnd.DragSourceEvent)
-		 */
+		@Override
 		public void dragSetData(DragSourceEvent event) {
 			if (filterCopyTransfer.isSupportedType(event.dataType)) {
 				event.data = getFilterCopySelection();
 			}
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see
-		 * org.eclipse.swt.dnd.DragSourceListener#dragStart(org.eclipse.swt.
-		 * dnd.DragSourceEvent)
-		 */
+		@Override
 		public void dragStart(DragSourceEvent event) {
 			if (getFilterCopySelection().length == 0)
 				event.doit = false;
@@ -1020,11 +993,12 @@ public class ResourceFilterGroup {
 		addButton.setLayoutData(data);
 		setButtonDimensionHint(addButton);
 		addButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleAdd(false);
 			}
 		});
-		
+
 		addGroupButton = new Button(composite, SWT.PUSH);
 		addGroupButton.setText(NLS.bind(
 				IDEWorkbenchMessages.ResourceFilterPage_addGroupButtonLabel, null));
@@ -1032,11 +1006,12 @@ public class ResourceFilterGroup {
 		addGroupButton.setLayoutData(data);
 		setButtonDimensionHint(addGroupButton);
 		addGroupButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleAdd(true);
 			}
 		});
-		
+
 
 		editButton = new Button(composite, SWT.PUSH);
 		editButton.setText(NLS.bind(
@@ -1045,6 +1020,7 @@ public class ResourceFilterGroup {
 		editButton.setLayoutData(data);
 		setButtonDimensionHint(editButton);
 		editButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleEdit();
 			}
@@ -1060,6 +1036,7 @@ public class ResourceFilterGroup {
 		removeButton.setLayoutData(data);
 		setButtonDimensionHint(removeButton);
 		removeButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				handleRemove();
 			}
@@ -1229,7 +1206,7 @@ public class ResourceFilterGroup {
 
 	/**
 	 * Apply the read only state and the encoding to the resource.
-	 * 
+	 *
 	 * @return true if the filters changed
 	 */
 	public boolean performOk() {
@@ -1297,6 +1274,7 @@ public class ResourceFilterGroup {
 		private FilterCopyTransfer() {
 		}
 
+		@Override
 		public void javaToNative(Object object, TransferData transferData) {
 			if (object == null || !(object instanceof FilterCopy[]))
 				return;
@@ -1316,6 +1294,7 @@ public class ResourceFilterGroup {
 			}
 		}
 
+		@Override
 		public Object nativeToJava(TransferData transferData) {
 			if (isSupportedType(transferData)) {
 				byte[] buffer = (byte[]) super.nativeToJava(transferData);
@@ -1350,10 +1329,12 @@ public class ResourceFilterGroup {
 		private final String MYTYPENAME = "org.eclipse.ui.ide.internal.filterCopy"; //$NON-NLS-1$
 		private final int MYTYPEID = registerType(MYTYPENAME);
 
+		@Override
 		protected String[] getTypeNames() {
 			return new String[] { MYTYPENAME };
 		}
 
+		@Override
 		protected int[] getTypeIds() {
 			return new int[] { MYTYPEID };
 		}
@@ -1463,7 +1444,7 @@ class FilterTypeUtil {
 				return new Integer(1);
 		}
 		if (property.equals(INHERITABLE))
-			return new Boolean(
+			return Boolean.valueOf(
 					(filter.getType() & IResourceFilterDescription.INHERITABLE) != 0);
 
 		if (property.equals(ARGUMENTS))
@@ -1506,14 +1487,12 @@ class FilterTypeUtil {
 	 * @param descriptors
 	 */
 	private static void sortDescriptors(IFilterMatcherDescriptor[] descriptors) {
-		Arrays.sort(descriptors, new Comparator() {
-			public int compare(Object arg0, Object arg1) {
-				if (((IFilterMatcherDescriptor) arg0).getId().equals(FileInfoAttributesMatcher.ID))
-					return -1;
-				if (((IFilterMatcherDescriptor) arg1).getId().equals(FileInfoAttributesMatcher.ID))
-					return 1;
-				return ((IFilterMatcherDescriptor) arg0).getId().compareTo(((IFilterMatcherDescriptor) arg1).getId());
-			}
+		Arrays.sort(descriptors, (arg0, arg1) -> {
+			if (((IFilterMatcherDescriptor) arg0).getId().equals(FileInfoAttributesMatcher.ID))
+				return -1;
+			if (((IFilterMatcherDescriptor) arg1).getId().equals(FileInfoAttributesMatcher.ID))
+				return 1;
+			return ((IFilterMatcherDescriptor) arg0).getId().compareTo(((IFilterMatcherDescriptor) arg1).getId());
 		});
 	}
 
@@ -1685,14 +1664,17 @@ class FilterCopy extends UIResourceFilterDescription {
 		return id;
 	}
 
+	@Override
 	public IPath getPath() {
 		return path;
 	}
 
+	@Override
 	public IProject getProject() {
 		return project;
 	}
 
+	@Override
 	public int getType() {
 		return type;
 	}
@@ -1739,6 +1721,7 @@ class FilterCopy extends UIResourceFilterDescription {
 		return 0;
 	}
 
+	@Override
 	public boolean equals(Object o) {
 		if (!(o instanceof FilterCopy))
 			return false;
@@ -1843,12 +1826,10 @@ class FilterCopy extends UIResourceFilterDescription {
 		return false;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.core.resources.IResourceFilterDescription#getFileInfoMatcherDescription()
-	 */
+	@Override
 	public FileInfoMatcherDescription getFileInfoMatcherDescription() {
-		
-		
+
+
 		Object arg = FilterCopy.this.getArguments();
 		if (arg instanceof FilterCopy []) {
 			FilterCopy [] filterCopies = (FilterCopy []) arg;
@@ -1857,7 +1838,7 @@ class FilterCopy extends UIResourceFilterDescription {
 				descriptions[i] = filterCopies[i].getFileInfoMatcherDescription();
 			arg = descriptions;
 		}
-		
+
 		FileInfoMatcherDescription desc = new FileInfoMatcherDescription(getId(), arg);
 		return desc;
 	}
@@ -1884,11 +1865,17 @@ class FilterEditDialog extends TrayDialog {
 
 	TreeMap/*<String, ICustomFilterArgumentUI */ customfilterArgumentMap = new TreeMap();
 	ICustomFilterArgumentUI currentCustomFilterArgumentUI = new ICustomFilterArgumentUI() {
+		@Override
 		public Object getID() {return "dummy";} //$NON-NLS-1$
+		@Override
 		public void create(Composite argumentComposite, Font font) {}
+		@Override
 		public void dispose() {}
+		@Override
 		public void selectionChanged() {}
+		@Override
 		public String validate() {return null;}
+		@Override
 		public StyledString formatStyledText(FilterCopy filter,
 				Styler fPlainStyler, Styler fBoldStyler) {return null;}
 	};
@@ -1916,13 +1903,7 @@ class FilterEditDialog extends TrayDialog {
 		customfilterArgumentMap.put(ui.getID(), ui);
 	}
 
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see
-	 * org.eclipse.jface.dialogs.Dialog#createDialogArea(org.eclipse.swt.widgets
-	 * .Composite)
-	 */
+	@Override
 	protected Control createDialogArea(Composite parent) {
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		parent.setLayoutData(data);
@@ -1961,7 +1942,7 @@ class FilterEditDialog extends TrayDialog {
 			createModeArea(font, topComposite);
 
 			createTargetArea(font, topComposite);
-			
+
 			createIdArea(font, topComposite);
 		}
 		else {
@@ -1971,9 +1952,7 @@ class FilterEditDialog extends TrayDialog {
 		return composite;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.jface.dialogs.TrayDialog#createButtonBar(org.eclipse.swt.widgets.Composite)
-	 */
+	@Override
 	protected Control createButtonBar(Composite parent) {
 		Label label = new Label(parent, SWT.SEPARATOR | SWT.HORIZONTAL);
 		label.setLayoutData(new GridData(SWT.FILL, SWT.TOP, true, false));
@@ -1992,7 +1971,7 @@ class FilterEditDialog extends TrayDialog {
         	Control helpControl = createHelpControl(composite);
         	((GridData) helpControl.getLayoutData()).horizontalIndent = convertHorizontalDLUsToPixels(IDialogConstants.HORIZONTAL_MARGIN);
 		}
-       
+
         Control buttonSection = dialogCreateButtonBar(composite);
         ((GridData) buttonSection.getLayoutData()).grabExcessHorizontalSpace = true;
         return composite;
@@ -2014,7 +1993,7 @@ class FilterEditDialog extends TrayDialog {
 				| GridData.VERTICAL_ALIGN_CENTER);
 		composite.setLayoutData(data);
 		composite.setFont(parent.getFont());
-		
+
 		// Add the buttons to the button bar.
 		createButtonsForButtonBar(composite);
 		return composite;
@@ -2041,7 +2020,7 @@ class FilterEditDialog extends TrayDialog {
 		inherited = new Button(inheritableComposite, SWT.CHECK);
 		String label;
 		label = IDEWorkbenchMessages.ResourceFilterPage_applyRecursivelyToFolderStructure;
-		
+
 		inherited
 				.setText(NLS
 						.bind(
@@ -2052,9 +2031,10 @@ class FilterEditDialog extends TrayDialog {
 		inherited.setLayoutData(data);
 		inherited.setFont(font);
 		inherited.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.INHERITABLE,
-						new Boolean(inherited.getSelection()));
+						Boolean.valueOf(inherited.getSelection()));
 			}
 		});
 		inherited.setSelection((((Boolean) FilterTypeUtil.getValue(filter,
@@ -2073,6 +2053,7 @@ class FilterEditDialog extends TrayDialog {
 		includeButton.setLayoutData(data);
 		includeButton.setFont(font);
 		includeButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE,
 						new Integer(0));
@@ -2086,6 +2067,7 @@ class FilterEditDialog extends TrayDialog {
 		excludeButton.setLayoutData(data);
 		excludeButton.setFont(font);
 		excludeButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE,
 						new Integer(1));
@@ -2137,6 +2119,7 @@ class FilterEditDialog extends TrayDialog {
 		idCombo.setLayoutData(data);
 		idCombo.setFont(font);
 		idCombo.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.ID, idCombo
 						.getItem(idCombo.getSelectionIndex()));
@@ -2158,7 +2141,7 @@ class FilterEditDialog extends TrayDialog {
 		FilterTypeUtil.setValue(filter, FilterTypeUtil.ID, idCombo
 				.getItem(idCombo.getSelectionIndex()));
 	}
-	
+
 
 	ICustomFilterArgumentUI getUI(String descriptorID) {
 		ICustomFilterArgumentUI result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(descriptorID);
@@ -2166,7 +2149,7 @@ class FilterEditDialog extends TrayDialog {
 			return result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(new String()); // default ui
 		return result;
 	}
-	
+
 	private void setupPatternLine() {
 		IFilterMatcherDescriptor descriptor;
 		if (createGroupOnly) {
@@ -2185,7 +2168,7 @@ class FilterEditDialog extends TrayDialog {
 	}
 
 	/**
-	 * 
+	 *
 	 */
 	private void selectComboItem(String filterID) {
 		IFilterMatcherDescriptor descriptor = ResourcesPlugin.getWorkspace()
@@ -2238,7 +2221,7 @@ class FilterEditDialog extends TrayDialog {
 		GridData data;
 		Composite targetComposite = createGroup(font, composite,
 				NLS.bind(IDEWorkbenchMessages.ResourceFilterPage_columnFilterTarget, null), false, true, 1);
-		
+
 		String[] targets = FilterTypeUtil.getTargets();
 		filesButton = new Button(targetComposite, SWT.RADIO);
 		filesButton.setText(targets[0]);
@@ -2259,18 +2242,21 @@ class FilterEditDialog extends TrayDialog {
 		filesAndFoldersButton.setFont(font);
 
 		filesButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
 						new Integer(0));
 			}
 		});
 		foldersButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
 						new Integer(1));
 			}
 		});
 		filesAndFoldersButton.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
 						new Integer(2));
@@ -2285,6 +2271,7 @@ class FilterEditDialog extends TrayDialog {
 		createInheritableArea(font, targetComposite);
 	}
 
+	@Override
 	protected Control createContents(Composite parent) {
 		Control control = super.createContents(parent);
 		initialize();
@@ -2300,15 +2287,12 @@ class FilterEditDialog extends TrayDialog {
 				getButton(OK).setEnabled(true);
 		}
 	}
-	/*
-	 * (non-Javadoc)
-	 * 
-	 * @see org.eclipse.jface.dialogs.Dialog#isResizable()
-	 */
+	@Override
 	protected boolean isResizable() {
 		return true;
 	}
 
+	@Override
 	protected void configureShell(Shell newShell) {
 		String title = null;
 		if (creatingNewFilter) {
@@ -2329,6 +2313,7 @@ class FilterEditDialog extends TrayDialog {
 	protected void update() {
 	}
 
+	@Override
 	protected void okPressed() {
 		// see if the initialize causes an exception
 		if (filter.hasStringArguments()) {
@@ -2384,12 +2369,12 @@ interface ICustomFilterArgumentUI {
 
 	/**
 	 * @return null if there's no issue
-	 * 
+	 *
 	 */
 	String validate();
 
 	/**
-	 * 
+	 *
 	 */
 	void selectionChanged();
 
@@ -2400,10 +2385,10 @@ interface ICustomFilterArgumentUI {
 	void create(Composite argumentComposite, Font font);
 
 	/**
-	 * 
+	 *
 	 */
 	void dispose();
-	
+
 }
 
 class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
@@ -2432,7 +2417,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	protected FilterEditDialog dialog;
 	protected Label dummyLabel1;
 	protected Label dummyLabel2;
-	
+
 	/**
 	 * @param dialog
 	 * @param parentShell
@@ -2445,16 +2430,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		this.filter = filter;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#getID()
-	 */
+	@Override
 	public Object getID() {
 		return FileInfoAttributesMatcher.ID;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#dispose()
-	 */
+	@Override
 	public void dispose() {
 		Widget list[] = new Widget[] {multiKey, multiOperator, multiArgumentComposite, stringArgumentComposite, stringTextArgumentComposite, arguments, argumentsLabel, argumentsCaseSensitive, argumentsRegularExpresion, attributeStringArgumentComposite, description, conditionComposite, descriptionComposite, dummyLabel1, dummyLabel2};
 		for (int i = 0; i < list.length; i++) {
@@ -2482,9 +2463,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		initializationComplete = false;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#create(org.eclipse.swt.widgets.Composite, org.eclipse.swt.graphics.Font)
-	 */
+	@Override
 	public void create(Composite argumentComposite, Font font) {
 		shell = argumentComposite.getShell();
 		GridLayout layout = new GridLayout();
@@ -2497,7 +2476,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		argumentComposite.setLayoutData(data);
 		argumentComposite.setFont(font);
-		
+
 		conditionComposite = new Composite(argumentComposite, SWT.NONE);
 		layout = new GridLayout();
 		layout.numColumns = 2;
@@ -2510,7 +2489,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		conditionComposite.setLayoutData(data);
 
 		createCustomArgumentsArea(font, conditionComposite);
-		
+
 		descriptionComposite = new Composite(argumentComposite, SWT.NONE);
 		layout = new GridLayout();
 		layout.numColumns = 1;
@@ -2521,11 +2500,11 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		descriptionComposite.setFont(font);
 		data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		descriptionComposite.setLayoutData(data);
-		
+
 		createDescriptionArea(font, descriptionComposite);
 		initializationComplete = true;
 	}
-	
+
 	/**
 	 * @param font
 	 * @param composite
@@ -2577,7 +2556,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			shell.layout(true, true);
 		}
 	}
-	
+
 	private void createCustomArgumentsArea(Font font, Composite composite) {
 		GridData data;
 
@@ -2592,19 +2571,20 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		multiArgumentComposite.setFont(font);
 		data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		multiArgumentComposite.setLayoutData(data);
-		
+
 		multiKey = new Combo(multiArgumentComposite, SWT.READ_ONLY);
 		multiKey.setItems(getMultiMatcherKeys());
 		data = new GridData(SWT.LEFT, SWT.TOP, false, false);
 		multiKey.setLayoutData(data);
 		multiKey.setFont(font);
 		multiKey.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				setupMultiOperatorAndField(true);
 				storeMultiSelection();
 			}
 		});
-		
+
 		// calculate max combo width
 		ArrayList allOperators = new ArrayList();
 		String[] keys = getMultiMatcherKeys();
@@ -2622,12 +2602,13 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		multiOperator.setLayoutData(data);
 		multiOperator.setFont(font);
 		multiOperator.addSelectionListener(new SelectionAdapter() {
+			@Override
 			public void widgetSelected(SelectionEvent e) {
 				setupMultiOperatorAndField(false);
 				storeMultiSelection();
 			}
 		});
-		
+
 		FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
 		String local = MultiMatcherLocalization.getLocalMultiMatcherKey(argument.key);
 		int index = multiKey.indexOf(local);
@@ -2635,7 +2616,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			multiKey.select(index);
 		else
 			multiKey.select(0);
-		
+
 		setupMultiOperatorAndField(true);
 	}
 
@@ -2654,9 +2635,9 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				multiOperator.select(0);
 		}
 		String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-		
+
 		Class selectedKeyOperatorType = FileInfoAttributesMatcher.getTypeForKey(selectedKey, selectedOperator);
-		
+
 		if (intiantiatedKeyOperatorType != null) {
 			if (arguments != null) {
 				arguments.dispose();
@@ -2704,17 +2685,13 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 
 		if (selectedKeyOperatorType.equals(String.class)) {
-	
+
 			arguments = new Text(multiArgumentComposite, SWT.SINGLE | SWT.BORDER);
 			GridData data= new GridData(SWT.FILL, SWT.FILL, true, false);
 			data.widthHint = 150;
 			arguments.setLayoutData(data);
 			arguments.setFont(multiArgumentComposite.getFont());
-			arguments.addModifyListener(new ModifyListener() {
-				public void modifyText(ModifyEvent e) {
-					validateInputText();
-				}
-			});
+			arguments.addModifyListener(e -> validateInputText());
 
 			dummyLabel1 = new Label(multiArgumentComposite, SWT.NONE);
 			data = new GridData(SWT.LEFT, SWT.CENTER, true, true);
@@ -2729,7 +2706,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			dummyLabel2.setLayoutData(data);
 
 			stringArgumentComposite = new Composite(multiArgumentComposite, SWT.NONE);
-			
+
 			GridLayout layout = new GridLayout();
 			layout.numColumns = 2;
 			layout.marginWidth = 0;
@@ -2765,12 +2742,9 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				argumentsRegularExpresion.setSelection(argument.regularExpression);
 			}
 
-			arguments.addModifyListener(new ModifyListener() {
-				public void modifyText(ModifyEvent e) {
-					storeMultiSelection();
-				}
-			});
+			arguments.addModifyListener(e -> storeMultiSelection());
 			argumentsRegularExpresion.addSelectionListener(new SelectionAdapter() {
+				@Override
 				public void widgetSelected(SelectionEvent e) {
 					setupDescriptionText(null);
 					storeMultiSelection();
@@ -2779,6 +2753,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				}
 			});
 			argumentsCaseSensitive.addSelectionListener(new SelectionAdapter() {
+				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2801,11 +2776,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			data.widthHint = 150;
 			arguments.setLayoutData(data);
 			arguments.setFont(multiArgumentComposite.getFont());
-			arguments.addModifyListener(new ModifyListener() {
-				public void modifyText(ModifyEvent e) {
-					validateInputText();
-				}
-			});
+			arguments.addModifyListener(e -> validateInputText());
 
 			if (filter.hasStringArguments()) {
 				FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
@@ -2814,12 +2785,8 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				else
 					arguments.setText(convertToEditableLength(argument.pattern));
 			}
-			
-			arguments.addModifyListener(new ModifyListener() {
-				public void modifyText(ModifyEvent e) {
-					storeMultiSelection();
-				}
-			});
+
+			arguments.addModifyListener(e -> storeMultiSelection());
 		}
 		if (selectedKeyOperatorType.equals(Date.class)) {
 			GridData data;
@@ -2828,6 +2795,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			argumentsDate.setLayoutData(data);
 			argumentsDate.setFont(multiArgumentComposite.getFont());
 			argumentsDate.addSelectionListener(new SelectionAdapter() {
+				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2857,6 +2825,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			argumentsBoolean.setFont(multiArgumentComposite.getFont());
 			argumentsBoolean.setItems(new String[] {MultiMatcherLocalization.getLocalMultiMatcherKey(Boolean.TRUE.toString()), MultiMatcherLocalization.getLocalMultiMatcherKey(Boolean.FALSE.toString())});
 			argumentsBoolean.addSelectionListener(new SelectionAdapter() {
+				@Override
 				public void widgetSelected(SelectionEvent e) {
 					storeMultiSelection();
 				}
@@ -2870,7 +2839,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			}
 		}
 		intiantiatedKeyOperatorType = selectedKeyOperatorType;
-		
+
 		if (fContentAssistField != null)
 			fContentAssistField.setEnabled(isUsingRegularExpression);
 
@@ -2947,7 +2916,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 		return Long.toString(value) + lengthPrefixes[lengthPrefixes.length - 1];
 	}
-	
+
 	// converts "32k" to "32768"
 	private String convertFromEditableLength(String string) throws NumberFormatException {
 		if (string.length() == 0)
@@ -2962,16 +2931,16 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		// seems equivalent to "return string", but it throws an exception if the string doesn't contain a valid number
 		return Long.toString(Long.parseLong(string));
 	}
-	
+
 	private void storeMultiSelection() {
 		if (intiantiatedKeyOperatorType != null) {
 			String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 			String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-	
+
 			FileInfoAttributesMatcher.Argument argument = new FileInfoAttributesMatcher.Argument();
 			argument.key = selectedKey;
 			argument.operator = selectedOperator;
-			
+
 			if (intiantiatedKeyOperatorType.equals(Date.class) && argumentsDate != null) {
 				Calendar calendar = Calendar.getInstance();
 				calendar.set(argumentsDate.getYear(), argumentsDate.getMonth(), argumentsDate.getDay());
@@ -3024,9 +2993,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		return (String []) list.toArray(new String[0]);
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#selectionChanged()
-	 */
+	@Override
 	public void selectionChanged() {
 	}
 
@@ -3035,16 +3002,17 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		dialog.updateFinishControls();
 	}
 
+	@Override
 	public String validate() {
 		String message = null;
 		if (intiantiatedKeyOperatorType != null) {
 			String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 			String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-	
+
 			FileInfoAttributesMatcher.Argument argument = new FileInfoAttributesMatcher.Argument();
 			argument.key = selectedKey;
 			argument.operator = selectedOperator;
-			
+
 			if (intiantiatedKeyOperatorType.equals(Date.class) && argumentsDate != null) {
 			}
 			if (intiantiatedKeyOperatorType.equals(String.class) && arguments != null) {
@@ -3086,15 +3054,13 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				}
 			}
 			if (intiantiatedKeyOperatorType.equals(Boolean.class) && argumentsBoolean != null) {
-				
+
 			}
 		}
 		return message;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#formatStyledText(org.eclipse.ui.internal.ide.dialogs.FilterCopy, org.eclipse.jface.viewers.StyledString.Styler, org.eclipse.jface.viewers.StyledString.Styler)
-	 */
+	@Override
 	public StyledString formatStyledText(FilterCopy filter,
 			Styler fPlainStyler, Styler fBoldStyler) {
 		return new StyledString(formatMultiMatcherArgument(filter), fPlainStyler);
@@ -3103,7 +3069,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	private String formatMultiMatcherArgument(FilterCopy filter) {
 		String argumentString = (String) filter.getArguments();
 		FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments(argumentString);
-		
+
 		StringBuffer builder = new StringBuffer();
 		builder.append(MultiMatcherLocalization.getLocalMultiMatcherKey(argument.key));
 		builder.append(' ');
@@ -3122,7 +3088,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 		if (type.equals(Date.class))
 			builder.append(DateFormat.getDateInstance().format(new Date(Long.parseLong(argument.pattern))));
-		
+
 		return builder.toString();
 	}
 }
@@ -3150,16 +3116,12 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		this.filter = filter;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#getID()
-	 */
+	@Override
 	public Object getID() {
 		return new String();
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#dispose()
-	 */
+	@Override
 	public void dispose() {
 		Widget list[] = new Widget[] {arguments, argumentsLabel, description};
 		for (int i = 0; i < list.length; i++) {
@@ -3173,9 +3135,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		description = null;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#create(org.eclipse.swt.widgets.Composite, org.eclipse.swt.graphics.Font)
-	 */
+	@Override
 	public void create(Composite argumentComposite, Font font) {
 		shell = argumentComposite.getShell();
 		GridLayout layout = new GridLayout();
@@ -3194,7 +3154,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			fContentAssistField.setEnabled(filter.getId().equals(REGEX_FILTER_ID));
 		argumentComposite.layout(true);
 	}
-	
+
 	private void createArgumentsArea(Font font, Composite composite) {
 		GridData data;
 		argumentsLabel = addLabel(composite, NLS.bind(
@@ -3204,12 +3164,8 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		data = new GridData(SWT.FILL, SWT.CENTER, true, false);
 		arguments.setLayoutData(data);
 		arguments.setFont(font);
-		arguments.addModifyListener(new ModifyListener() {
-			public void modifyText(ModifyEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.ARGUMENTS,
-						arguments.getText());
-			}
-		});
+		arguments.addModifyListener(e -> FilterTypeUtil.setValue(filter, FilterTypeUtil.ARGUMENTS,
+				arguments.getText()));
 		if (filter.hasStringArguments())
 			arguments.setText((String) FilterTypeUtil.getValue(filter,
 					FilterTypeUtil.ARGUMENTS));
@@ -3247,9 +3203,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		return label;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#selectionChanged()
-	 */
+	@Override
 	public void selectionChanged() {
 		if (arguments != null)
 			arguments.setEnabled(filter.hasStringArguments());
@@ -3277,13 +3231,12 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		description.setFont(font);
 	}
 
+	@Override
 	public String validate(){
 		return null;
 	}
 
-	/* (non-Javadoc)
-	 * @see org.eclipse.ui.internal.ide.dialogs.ICustomFilterArgumentUI#formatStyledText(org.eclipse.ui.internal.ide.dialogs.FilterCopy, org.eclipse.jface.viewers.StyledString.Styler, org.eclipse.jface.viewers.StyledString.Styler)
-	 */
+	@Override
 	public StyledString formatStyledText(FilterCopy filter,
 			Styler fPlainStyler, Styler fBoldStyler) {
 		return new StyledString(filter.getArguments() != null ? filter
@@ -3292,7 +3245,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 }
 
 class MultiMatcherLocalization {
-	
+
 	static String[][] multiMatcherKey = {
 			{FileInfoAttributesMatcher.KEY_NAME, IDEWorkbenchMessages.ResourceFilterPage_multiKeyName},
 			{FileInfoAttributesMatcher.KEY_PROPJECT_RELATIVE_PATH, IDEWorkbenchMessages.ResourceFilterPage_multiKeyProjectRelativePath},
@@ -3312,7 +3265,7 @@ class MultiMatcherLocalization {
 			{Boolean.TRUE.toString(), IDEWorkbenchMessages.ResourceFilterPage_true},
 			{Boolean.FALSE.toString(), IDEWorkbenchMessages.ResourceFilterPage_false}
 	};
-	
+
 	static public String getLocalMultiMatcherKey(String key) {
 		for (int i = 0; i < multiMatcherKey.length; i++) {
 			if (multiMatcherKey[i][0].equals(key))
@@ -3320,7 +3273,7 @@ class MultiMatcherLocalization {
 		}
 		return null;
 	}
-	
+
 	static public String getMultiMatcherKey(String local) {
 		for (int i = 0; i < multiMatcherKey.length; i++) {
 			if (multiMatcherKey[i][1].equals(local))
